--- a/PrimerJS/index.html
+++ b/PrimerJS/index.html
@@ -13,6 +13,9 @@
     <h1 id="demo"></h1>
     <h6 id="nuevoNombre"></h6>
     <p id="valorY"></p>
+    <!-- Disparador que llama a la función en el javaScript -->
+    <button onclick="mostrarAlerta()" id="boton1">Mostrar Alerta</button>
+    <p id="parrafo2"></p>
 
     <!-- Cerrar mientras no tenga disparadores-->
     <script src="js/script.js"></script>    
