--- a/PrimerJS/index.html
+++ b/PrimerJS/index.html
@@ -17,6 +17,8 @@
     <button onclick="mostrarAlerta()" id="boton1">Mostrar Alerta</button>
     <p id="parrafo2"></p>
 
+    <p>El resultado de la suma es <span id="suma"></span></p>
+
     <!-- Cerrar mientras no tenga disparadores-->
     <script src="js/script.js"></script>    
 </body>
