--- a/PrimerJS/index.html
+++ b/PrimerJS/index.html
@@ -19,6 +19,13 @@
 
     <p>El resultado de la suma es <span id="suma"></span></p>
 
+    <p><label for="numero1">Numer1</label>
+    <input type="number" id="numero1"></p>
+    <p><label for="numero2">Numer2</label>
+    <input type="number" id="numero2"></p>
+    
+    <button onclick="sumar2()">Enviar</button>
+    <p id="suma2"></p>
     <!-- Cerrar mientras no tenga disparadores-->
     <script src="js/script.js"></script>    
 </body>
