--- a/Resumen/index.html
+++ b/Resumen/index.html
@@ -10,14 +10,14 @@
 <body>
     <section>
         <header>
-            <div class="menu">
+            <div class="menuP">
             <ul>
-                <li><a href=".../JavaScript/PrimerJS/index.html"></a>PrimerJS</li>
-                <li><a href=".../JavaScript/SegundoJS/index.html"></a>SegundoJS</li>
-                <li><a href=".../JavaScript/TercerJS/index.html"></a>TercerJS</li>
-                <li><a href=".../JavaScript/CuartoJS/index.html"></a>CuartoJS</li>
-                <li><a href=".../JavaScript/LetraDNI/index.html"></a>Letra DNI</li>
-                <li><a href=".../JavaScript/IndicaEdad/index.html"></a>Indica Edad</li>
+                <li><a href="/JavaScript/PrimerJS/index.html"></a>PrimerJS</li>
+                <li><a href="/JavaScript/SegundoJS/index.html"></a>SegundoJS</li>
+                <li><a href="/JavaScript/TercerJS/index.html"></a>TercerJS</li>
+                <li><a href="/JavaScript/CuartoJS/index.html"></a>CuartoJS</li>
+                <li><a href="/JavaScript/LetraDNI/index.html"></a>Letra DNI</li>
+                <li><a href="/JavaScript/IndicaEdad/index.html"></a>Indica Edad</li>
 
             </ul>
             </div>
