--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <a href="CuartoJS/index.html">Cuarto JS </a>
             <a href="QuintoJS/index.html">Quinto JS</a>
             <a href="SextoJS/index.html">Sexto JS</a>
+            <a href="SeptimoJS/index.html">Septimo JS</a>
+            <a href="OctavoJS/index.html">Octavo JS</a>
             <a href="LetraDNI/index.html">Letra del DNI</a>
             <a href="IndicaEdad/index.html">Sexto JS</a>
+            <a href="GastosDeEnvio/index.html">Gastos de Gastos</a>
         </div>  
    
 </body>
