--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <a href="SextoJS/index.html">Sexto JS</a>
             <a href="SeptimoJS/index.html">Septimo JS</a>
             <a href="OctavoJS/index.html">Octavo JS</a>
-            <a href="LetraDNI/index.html">Letra del DNI</a>
-            <a href="IndicaEdad/index.html">Sexto JS</a>
-            <a href="GastosDeEnvio/index.html">Gastos de Gastos</a>
+            <a href="NovenoJS/index.html">Noveno JS</a>
+            <a href="DecimoJS/index.html">Decimo JS</a>
+            <a href="LetraDNI/index.html">Letra DNI</a>
+            <a href="IndicaEdad/index.html">Indica Edad</a>
+            <a href="GastosDeEnvio/index.html">Gastos Envio</a>
         </div>  
    
 </body>
